--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       <p>Made by Anurag Mittal</p>
       <div class="social-links">
         <a href="https://www.instagram.com/treasure_tiles?igsh=MXFzMG9vb2htcWxlZw==" target="_blank"><img src="instagram.png" alt="Instagram" class="social-icon"></a>
-        <a href="https://www.facebook.com/yourprofile" target="_blank"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
-        <a href="https://www.twitter.com/yourprofile" target="_blank"><img src="twitter.png" alt="X" class="social-icon"></a>
+        <a href="https://www.facebook.com/profile.php?id=61560462899302&mibextid=ZbWKwL" target="_blank"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
+        <a herf="https://x.com/Monetiles?t=P1klS7sVDnOHELRAqAcHPA&s=09" target="_blank"><img src="twitter.png" alt="X" class="social-icon"></a>
       </div>
     </div>
   </footer>
