--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,32 @@
   <meta name="google-adsense-account" content="ca-pub-4351253572981801">
   <script type="module" src="register.js" defer></script>
 </head>
+
 <body>
+  <header>
+    <div class="logo-container">
+      <img src="logo.png"  class="logo">
+      <h1>Monetiles</h1>
+    </div>
+    <!-- Hamburger menu container -->
+    <div class="hamburger-menu">
+      <!-- Hamburger icon -->
+      <button class="hamburger-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <!-- Menu items -->
+      <div class="menu-items">
+        <div class="menu-column">
+          <button id="withdraw" class="btn">Withdraw</button>
+          <button onclick="window.location.href='about game.html'" class="about-button btn">About Game</button>
+          <button onclick="window.location.href='login.html'" class="btn">Login / Sign Up</button>
+        </div>
+      </div>
+  
+  </div>
+  </header>
   <div class="container">
     <!-- Welcome Message -->
     <div id="welcome-message" class="welcome-message"></div>
@@ -55,24 +81,9 @@
       <div class="tile" id="tile9"></div>
     </div>
     <button id="play-again">Play Again</button>
+    <div class="menu-container">
     <div id="wallet" class="wallet-box">Wallet: <span id="wallet-balance">0</span>
-      <!-- Hamburger menu container -->
-      <div class="hamburger-menu">
-        <!-- Hamburger icon -->
-        <button class="hamburger-icon">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-        <!-- Menu items -->
-        <div class="menu-items">
-          <div class="menu-column">
-            <button id="withdraw" class="btn">Withdraw</button>
-            <button onclick="window.location.href='about game.html'" class="about-button btn">About Game</button>
-            <button onclick="window.location.href='login.html'" class="btn">Login / Sign Up</button>
-          </div>
-        </div>
-      </div>
+    </div>
     </div>
   
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801" crossorigin="anonymous"></script>
@@ -102,11 +113,11 @@
   </div>
   <footer>
     <div class="footer-content">
-      <p>Made by Anurag Mittal</p>
+      <p>&copy; 2024 Monetiles. All rights reserved.</p>
       <div class="social-links">
         <a href="https://www.instagram.com/treasure_tiles?igsh=MXFzMG9vb2htcWxlZw==" target="_blank"><img src="instagram.png" alt="Instagram" class="social-icon"></a>
-        <a href="https://www.facebook.com/profile.php?id=61560462899302&mibextid=ZbWKwL" target="_blank"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
-        <a herf="https://x.com/Monetiles?t=P1klS7sVDnOHELRAqAcHPA&s=09" target="_blank"><img src="twitter.png" alt="X" class="social-icon"></a>
+        <a href="https://www.facebook.com/yourprofile" target="_blank"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
+        <a href="https://www.twitter.com/yourprofile" target="_blank"><img src="twitter.png" alt="X" class="social-icon"></a>
       </div>
     </div>
   </footer>
