--- a/index.html
+++ b/index.html
@@ -14,26 +14,10 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="logo.png"  class="logo">
+      <img src="logo.png" alt="monetiles" class="logo">
       <h1>Monetiles</h1>
     </div>
-    <!-- Hamburger menu container -->
-    <div class="hamburger-menu">
-      <!-- Hamburger icon -->
-      <button class="hamburger-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <!-- Menu items -->
-      <div class="menu-items">
-        <div class="menu-column">
-          <button id="withdraw" class="btn">Withdraw</button>
-          <button onclick="window.location.href='about game.html'" class="about-button btn">About Game</button>
-          <button onclick="window.location.href='login.html'" class="btn">Login / Sign Up</button>
-        </div>
-      </div>
-  
+    
   </div>
   </header>
   <div class="container">
@@ -84,6 +68,23 @@
     <div class="menu-container">
     <div id="wallet" class="wallet-box">Wallet: <span id="wallet-balance">0</span>
     </div>
+    <!-- Hamburger menu container -->
+    <div class="hamburger-menu">
+      <!-- Hamburger icon -->
+      <button class="hamburger-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <!-- Menu items -->
+      <div class="menu-items">
+        <div class="menu-column">
+          <button id="withdraw" class="btn">Withdraw</button>
+          <button onclick="window.location.href='about game.html'" class="about-button btn">About Game</button>
+          <button onclick="window.location.href='login.html'" class="btn">Login / Sign Up</button>
+        </div>
+      </div>
+  
     </div>
   
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801" crossorigin="anonymous"></script>
@@ -106,7 +107,6 @@
     <script>
          (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-  <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
     <script src="script.js"></script>
     <script src="INSTRUCTION.JS"></script>
     <a herf="https://bid.onclckstr.com/vast?spot_id=640334">      </a>
