--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     </script>
     <script src="script.js"></script>
     <script src="INSTRUCTION.JS"></script>
+      <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
     <a herf="https://bid.onclckstr.com/vast?spot_id=640334">      </a>
   </div>
   <footer>
