--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -81,7 +82,7 @@
         <div class="menu-column">
           <button id="withdraw" class="btn">Withdraw</button>
           <button onclick="window.location.href='about game.html'" class="about-button btn">About Game</button>
-          <button onclick="window.location.href='login.html'" class="btn">Login / Sign Up</button>
+          <button id="auth-button" class="btn"></button>
         </div>
       </div>
   
@@ -109,7 +110,6 @@
     </script>
     <script src="script.js"></script>
     <script src="INSTRUCTION.JS"></script>
-      <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
     <a herf="https://bid.onclckstr.com/vast?spot_id=640334">      </a>
   </div>
   <footer>
