--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monetiles</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://alwingulla.com/88/tag.min.js" data-zone="72938" async data-cfasync="false"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5445064991553985"
      crossorigin="anonymous"></script>
   <script type="module" src="register.js" defer></script>
