--- a/withdraw.html
+++ b/withdraw.html
@@ -51,6 +51,7 @@ document.addEventListener('DOMContentLoaded', function() {
       event.stopPropagation(); // Prevent event from bubbling up to parent div
       const brand = button.dataset.brand;
       const amount = parseInt(button.dataset.amount);
+      alert("This feature is in development, Stay Tuned.");
       requestGiftCard(brand, amount);
     });
   });
