--- a/index.html
+++ b/index.html
@@ -1,21 +1,70 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Monetiles</title>
+  <meta name="description" content="Unlock rewards and earn free gift cards from Amazon, Flipkart, and Google Play with Monetiles! Play our exciting game by tapping tiles and guessing which ones contain rewards. Enjoy an easy-to-understand and clean UI. Start playing and winning now!">
+  <meta name="keywords" content="Monetiles, free gift cards, Amazon gift cards, Flipkart gift cards, Google Play gift cards, earn money online, make money online, online rewards, cashback rewards, survey rewards, play and earn, earn from home, passive income, referral rewards, online tasks, micro tasks, online gaming rewards, loyalty rewards, digital rewards, earn online, money-making games, mobile rewards, app rewards, earn points online, online incentives, online gift cards">
+<meta name="author" content="Anurag Mittal">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="index, follow">
+<meta name="theme-color" content="#ff6600">
+
+<!-- Open Graph Meta Tags for Facebook -->
+<meta property="og:title" content="Monetiles - Earn Free Gift Cards by Playing!">
+<meta property="og:description" content="Play Monetiles and unlock rewards by guessing which tiles contain gift cards. Earn Amazon, Flipkart, and Google Play gift cards easily. Enjoy a clean and user-friendly UI. Start winning now!">
+<meta property="og:image" content="https://github.com/Anuragmittal2006/Monetiles/blob/main/logo.png">
+<meta property="og:url" content="https://monetiles.com">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Monetiles - Earn Free Gift Cards by Playing!">
+<meta name="twitter:description" content="Play Monetiles and unlock rewards by guessing which tiles contain gift cards. Earn Amazon, Flipkart, and Google Play gift cards easily. Enjoy a clean and user-friendly UI. Start winning now!">
+<meta name="twitter:image" content="https://github.com/Anuragmittal2006/Monetiles/blob/main/logo.png">
+<meta name="twitter:site" content="@Monetiles">
+
+<title>Monetiles - Play, Guess & Win Free Gift Cards from Amazon, Flipkart & Google Play!</title>
   <link rel="stylesheet" href="styles.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5445064991553985"
      crossorigin="anonymous"></script>
   <script type="module" src="register.js" defer></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Game",
+      "name": "Monetiles",
+      "description": "Unlock rewards and earn free gift cards from Amazon, Flipkart, and Google Play with Monetiles! Play our exciting game by tapping tiles and guessing which ones contain rewards. Enjoy an easy-to-understand and clean UI.",
+      "author": {
+        "@type": "Person",
+        "name": "Anurag Mittal"
+      },
+      "image": "https://github.com/Anuragmittal2006/Monetiles/blob/main/logo.png",
+      "url": "https://monetiles.com",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Monetiles",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://github.com/Anuragmittal2006/Monetiles/blob/main/logo.png"
+        }
+      },
+      "datePublished": "2024-06-17",
+      "genre": ["Puzzle", "Casual", "Trivia", "Strategy", "Arcade", "Reward-Based", "Interactive", "Online Earnings"],
+      "applicationCategory": "Game",
+      "operatingSystem": "Web"
+    }
+    </script>
+    
 </head>
 
 <body>
   <header>
     <div class="logo-container">
-      <img src="logo.png" alt="monetiles" class="logo">
+      <img src="logo.png" alt="monetiles logo" class="logo">
       <h1>Monetiles</h1>
     </div>
     
@@ -117,8 +166,8 @@
       <p>&copy; 2024 Monetiles. All rights reserved.</p>
       <div class="social-links">
         <a href="https://www.instagram.com/treasure_tiles?igsh=MXFzMG9vb2htcWxlZw==" target="_blank"><img src="instagram.png" alt="Instagram" class="social-icon"></a>
-        <a href="https://www.facebook.com/yourprofile" target="_blank"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
-        <a href="https://www.twitter.com/yourprofile" target="_blank"><img src="twitter.png" alt="X" class="social-icon"></a>
+        <a href="https://www.facebook.com/profile.php?id=61560462899302&mibextid=ZbWKwL" target="_blank"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
+        <a href="https://x.com/monetiles" target="_blank"><img src="twitter.png" alt="X" class="social-icon"></a>
       </div>
     </div>
   </footer>
